# AIDD-30-days-challenge-Task-4

./: .env  agent.py  app.py  gemini.md  main.py  pyproject.toml  tools.py
.gemini/: settings.json
